--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:usesCleartextTraffic="true">
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".LoginActivity"
             android:theme="@style/NoBarTheme">
             <intent-filter>
@@ -26,6 +27,7 @@
         </activity>
 
         <activity
+            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:label="@string/app_name" />
     </application>
