--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/NoBarTheme"
         android:usesCleartextTraffic="true">
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".LoginActivity"
-            android:theme="@style/NoBarTheme">
+            android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,8 +27,7 @@
 
         <activity
             android:screenOrientation="portrait"
-            android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:name=".MainActivity" />
 
         <meta-data
             android:name="preloaded_fonts"
